# lass

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  COPYING  CTestConfig.cmake  ChangeLog  Environment.cmake  INSTALL-WIN32.txt  LassConfig.cmake.in  LassConfig.py.in  LassPythonConfig.cmake.in  LassPythonConfig.py.in  NEWS  README  README.md  auto_cmakelists.py  autoconfiscate_unix.py  build_intel700.py  build_intel700_dll.py  build_intel700_dll_win32.py  build_intel700_static_win32.py  build_unix.py  build_vc71.py  build_vc71_dll.py  build_vc71_dll_win32.py  build_vc71_static_win32.py  build_vc8_dll.py  build_vc8_dll_win32.py  build_vc8_dll_x64.py  build_vc8_static_win32.py  build_vc8_static_x64.py  clean.py  conanfile.py  pre_build.py  pyproject.toml  rebuild.py  setup.py
lass/: CMakeLists.txt  lass.natvis  lass_common.cpp  lass_common.h
lass/config/: architecture.h  check_int8_t_is_char.cpp  check_long_double_std_functions.cpp  check_sched_h_cpu_set_t.cpp  compiler_clang.h  compiler_gcc.h  compiler_intel.h  compiler_msvc.h  compiler_sunpro.h  compilers.h  config.h  local_config.h.in  platform_bsd.h  platform_cygwin.h  platform_linux.h  platform_osx.h  platform_solaris.h  platform_win32.h  platforms.h  pragmas_msvc.h
lass/dll/: dll_main.cpp  dll_main.h
lass/io/: arg_parser.cpp  arg_parser.h  arg_parser.inl  binary_i_file.cpp  binary_i_file.h  binary_i_memory_block.cpp  binary_i_memory_block.h  binary_i_memory_map.cpp  binary_i_memory_map.h  binary_i_socket.cpp  binary_i_socket.h  binary_i_stream.cpp  binary_i_stream.h  binary_i_stream.inl  binary_o_file.cpp  binary_o_file.h  binary_o_socket.cpp  binary_o_socket.h  binary_o_stream.cpp  binary_o_stream.h  binary_o_stream.inl  binary_stream_base.cpp  binary_stream_base.h  file_attribute.cpp  file_attribute.h  image.cpp  image.h  io_common.h  io_fwd.cpp  io_fwd.h  keyboard.cpp  keyboard.h  logger.cpp  logger.h  matlab_o_stream.h  message_pipe.cpp  message_pipe.h  proxy_i_stream.cpp  proxy_i_stream.h  proxy_man.cpp  (+13 more)
lass/meta/: bool.h  empty_type.h  enable_if.h  if.h  int.h  is_charptr.h  is_const.h  is_convertible.h  is_derived.h  is_integral.h  is_member.tmpl.h  is_same.h  is_trivial.h  meta_assert.h  meta_common.h  null_type.h  select.h  tuple.h  type_list.h  type_traits.h  type_tuple.h  wrap.h
lass/num/: basic_ops.h  basic_ops.inl  basic_types.h  db.h  db.inl  distribution.h  distribution.inl  distribution_transformations.h  double_double.cpp  double_double.h  double_double_constants.cpp  endianness.h  endianness.inl  filtered_float.cpp  filtered_float.h  filters.h  filters.inl  floating_point_comparison.h  floating_point_consistency.cpp  floating_point_consistency.h  interval.h  interval.inl  inverse_transform_sampling.h  matrix.h  matrix.inl  matrix_vector.h  matrix_vector.inl  modulo.h  modulo.inl  num_cast.h  num_common.h  num_traits.cpp  num_traits.h  polynomial.h  polynomial.inl  polynomial_quotient.h  polynomial_quotient.inl  random.cpp  random.h  random.inl  (+14 more)
lass/prim/: aabb_2d.h  aabb_2d.inl  aabb_2d_ray_2d.h  aabb_2d_simple_polygon_2d.h  aabb_2d_transformation_2d.h  aabb_2d_triangle_2d.h  aabb_3d.h  aabb_3d.inl  aabb_3d_disk_3d.h  aabb_3d_parallelogram_3d.h  aabb_3d_plane_3d.h  aabb_3d_ray_3d.h  aabb_3d_simple_polygon_3d.h  aabb_3d_sphere_3d.h  aabb_3d_transformation_3d.h  aabb_3d_triangle_3d.h  algorithm.h  algorithm.inl  color_rgba.cpp  color_rgba.h  color_rgba_transformation_3d.h  degenerate_policy.h  disk_3d.h  disk_3d.inl  disk_3d_ray_3d.h  disk_3d_sphere_3d.h  equation_policy.h  line_2d.h  line_2d.inl  line_2d_ray_2d.h  line_3d.h  line_3d.inl  line_segment_2d.h  line_segment_2d.inl  line_segment_2d_ray_2d.h  line_segment_3d.h  line_segment_3d.inl  line_segment_3d_plane_3d.h  line_segment_3d_ray_3d.h  min_max_policy.h  (+64 more)
lass/python/: _lass_module.cpp  _lass_module.h  argument_traits.h  bulk_add.cpp  bulk_add.h  bulk_add_integer.tmpl.inl  callback_python.cpp  callback_python.tmpl.h  class_definition.cpp  class_definition.h  container.cpp  container.h  enum_definition.cpp  enum_definition.h  exception.cpp  exception.h  export_traits.cpp  export_traits.h  export_traits_chrono.cpp  export_traits_chrono.h  export_traits_filesystem.cpp  export_traits_filesystem.h  export_traits_function.cpp  export_traits_function.h  export_traits_optional.h  export_traits_prim.cpp  export_traits_prim.h  (+48 more)
pylass/: CMakeLists.txt  aabb_tree_2d.cpp  aabb_tree_2d.h  containers.cpp  containers.h  filters.cpp  filters.h  image.cpp  image.h  kd_tree_2d.cpp  kd_tree_2d.h  line_segment_2d.cpp  line_segment_2d.h  main.cpp  mesh_interpolator.cpp  mesh_interpolator.h  package.py.in  polynomial.cpp  polynomial.h  pylass_common.cpp  pylass_common.h  quad_tree_2d.cpp  quad_tree_2d.h  splines.cpp  splines.h  vertex_2d.cpp  vertex_2d.h
src/: CMakeLists.txt  CTestConfig.cmake  dll.sln  dll_vc8.sln  featurerequests.txt  lass.sln  lass_common.cpp  lass_common.h  lass_vc8.sln  lass_vc9.sln  readme.txt
test_suite/: CMakeLists.txt  auto_test_suite.cpp.in  bar.cpp  bar.h  constraints.txt  default_arguments.h.in  dynamic_child.cpp  foo.cpp  foo.h  ipc_child.cpp  ipc_protocol.h  python_embedding.cpp  python_embedding.h  python_shadow.cpp  python_shadow.h  test.cpp  test_bar.py  test_common.cpp  test_common.h  test_io_arg_parser.cpp  test_io_binary_stream.cpp  test_io_file_attributes.cpp  test_io_ipc.cpp  test_io_proxy_system.cpp  test_io_socket.cpp  test_meta_tuple.cpp  test_meta_type_list.cpp  test_meta_type_traits.cpp  test_meta_type_tuple.cpp  test_meta_various.cpp  test_num_basic_ops.cpp  test_num_db.cpp  test_num_double_double.cpp  test_num_filtered_float.cpp  test_num_filters.cpp  test_num_inverse_transform_sampling.cpp  test_num_matrix_vector.cpp  test_num_modulo.cpp  test_num_num_cast.cpp  test_num_num_traits.cpp  (+72 more)
tools/: CMakeLists.txt  LassClang.cmake  LassStubgen.cmake  _get_libclang_version.py  add_headers.py  build_dll.py  build_tools_win.py  change_cvsroot.py  double_double_gen.cpp  matlabToPyLab.py  param_expander.pl  param_expander.py  remove_double_eol.py  remove_double_eol_list.py  update_lass.py  xmlToMatlab.py
(+1019 files in other folders)
