[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
target-version = ["py39"]

[tool.ruff]
target-version = 'py39'

[tool.ruff.lint]
# On top of the default select (E4, E7, E9, and F), enable
# isort (I) and unsorted-dunder-all (RUF022).
extend-select = ["I", "RUF022"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["conan.*"]
ignore_missing_imports = true
